--- a/joulukalenteriWithForm.html
+++ b/joulukalenteriWithForm.html
@@ -79,7 +79,7 @@
   </head>
   <body>
     <h1>Joulukalenteri</h1>
-    <p>Valitse päivä ja avaa luukku!</p>
+    <p>Valitse päivä ja avaa luukku :=)</p>
 
     <div class="calendar-form">
       <label for="daySelect">Minkä päivän luukun haluat avata:</label>
